Wrong behavious when docking / undocking playlist. Ends up showing a blank widget
Steps:
- Playlist, shown, undocked
- Start Video
- Dock Playlist
- Show Playlist
- Hide Playlist / Undock Playlist
- Stop Video
** problem1 : playlist shows, and is docked again
- Hide playlist
** problem2 : blank video widget instead of background