Qt: main_interface: fix showTab(oldwidget) for undocked playlist (fix #6794)